fix(invoice): corrected missing margin

--- a/src/app/edit-timesheet/invoice-form/invoice-form.component.scss
+++ b/src/app/edit-timesheet/invoice-form/invoice-form.component.scss
@@ -89,3 +89,10 @@
         }
     }
 }
+
+#client {
+  @media (min-width: $screen-sm-min) {
+    margin-left: 40px;
+  }
+}
+
